ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -45,7 +45,7 @@
 
   #nav-title
     color: #000
-    margin: 18px 20px -10px
+    margin: 20px 20px 10px
 
   #nav-title li
     color: #000
